[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycreditcard"
version = "1.1.0"
description = "A simple class for identifying, validating, and formatting credit card numbers. Maintained fork of alexforster/creditcard."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Alex Forster", email = "alex@alexforster.com" }
]
maintainers = [
    { name = "IFSCM", email = "your@email.com" }
]
requires-python = ">=3.7"
keywords = ["credit card", "creditcard", "validation", "luhn"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/IFSCM/pycreditcard"
"Original Project" = "https://github.com/alexforster/creditcard"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
creditcard = ["data/registry.xml"]
